clean-up testing utilities